Adding logo for gh-pages, adding numbers of starts/dowload and url for github

--- a/src/src/index.html
+++ b/src/src/index.html
@@ -11,6 +11,9 @@
 
     <meta property="og:title" content="Phulp" />
     <meta property="og:description" content="The task manager for PHP" />
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <!-- <meta property="og:image" content="" /> -->
 
     <!-- build:css styles/vendor.css -->
