fixing some stuff

--- a/src/src/index.html
+++ b/src/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Phulp" />
     <meta property="og:description" content="The task manager for PHP" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/reisraff/phulp/gh-pages/favicon.png" />
 
     <!-- <meta property="og:image" content="" /> -->
 
