fixing plugin path

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               totalPlugins: '...',
               items: [
                 {
-                  url:'/plugins',
+                  url:'/phulp/plugins',
                   label: 'Plugins'
                 },
                 {
